src/main/java/com/example/timelist/Error/StudentInGroupException.java
package com.example.timelist.Error;

public class StudentInGroupException extends RuntimeException{
}
